jaxrs - egress singleton fix + java 8 changes (#32)